Aggiunta logo con titolo e stile in css

--- a/index.html
+++ b/index.html
@@ -5,12 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Toolist</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">
 </head>
 <body>
 
-    <!-- Inizio logo con titolo -->
-    <header></header>
-    <!-- /Fine logo con titolo -->
+    
+    <header>
+        <!-- Inizio logo con titolo -->
+        <div class="contenitore-header">
+            <img class="logo" src="img/logo copia.png" alt="Logo Toboolist">
+            <h1 class="titolo">Toboolist</h1>
+        </div>
+        <!-- /Fine logo con titolo -->
+    </header>
+    
 
     <main>
 
