Aggiunta sezioni main con stile css

--- a/index.html
+++ b/index.html
@@ -26,13 +26,19 @@
     <main>
 
     <!-- Inizio section con button -->
-        <section></section>
+             <section>
+                <div class="contenitore-button">
+
+             </section>
     <!-- /Fine section con button -->
 
     <!-- Inizio corpo della pagina -->
-        <section></section>
-    <!-- Fine corpo della pagina -->
+             <section>
+                 <div class="contenitore-main"></div>
 
+             </section>
+    <!-- Fine corpo della pagina -->
+        </div>
     </main>
     
     
