Aggiunta botton con stile

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
     <!-- Inizio section con button -->
              <section>
                 <div class="contenitore-button">
-
+                    <button class="button-task">Add Task</button>
+                    <button class="button-section">Add section</button>
              </section>
     <!-- /Fine section con button -->
 
