Aggiunta prima parte main

--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Toolist</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -30,12 +27,22 @@
                 <div class="contenitore-button">
                     <button class="button-task">Add Task</button>
                     <button class="button-section">Add section</button>
-             </section>
+                </div>
+                </section>
     <!-- /Fine section con button -->
 
     <!-- Inizio corpo della pagina -->
              <section>
-                 <div class="contenitore-main"></div>
+                 <div class="contenitore-main">
+                     <div class="contenuto-main">
+                        <div class="riga-secondaria">
+                            <ul> <h2> <span>&#9662</span> New Task</h2>
+                                <li>Quarterly Newsletter <span class="celeste"> Editorial</span></li>
+                            </ul>
+                        </div>
+                        
+                     </div>
+                </div>
 
              </section>
     <!-- Fine corpo della pagina -->
