Aggiunta di tutte le sezioni in main con stile

--- a/index.html
+++ b/index.html
@@ -32,18 +32,37 @@
     <!-- /Fine section con button -->
 
     <!-- Inizio corpo della pagina -->
-             <section>
-                 <div class="contenitore-main">
-                     <div class="contenuto-main">
-                        <div class="riga-secondaria">
+            <section>
+                <div class="contenitore-main">
+                     <div class="sezione">
                             <ul> <h2> <span>&#9662</span> New Task</h2>
-                                <li>Quarterly Newsletter <span class="celeste"> Editorial</span></li>
+                                <li> <span class="check">&#10003</span> Quarterly Newsletter <span class="celeste"> Editorial</span></li>
                             </ul>
-                        </div>
-                        
-                     </div>
-                </div>
+                    </div>  
+                    
+                    <div class="sezione">
+                        <ul> <h2> <span>&#9662</span> Today</h2>
+                            <li> <span class="check">&#10003</span> Recruiting blog post <span class="celeste"> Editorial</span></li>
+                            <li> <span class="check">&#10003</span> Mobile app luanch <span class="viola"> Q1 Goals</span></li>
+                            <li> <span class="check-cross">&#10007</span> Interview John H. <span class="verde"> Recruiting</span></li>
+                            <li> <span class="check">&#10003</span> Summit update to mobile storefronts <span class="arancione"> Mobile</span></li>
+                        </ul>
+                    </div>  
 
+                    <div class="sezione">
+                         <ul> <h2> <span>&#9662</span> New Task</h2>
+                             <li> <span class="check-cross">&#10007</span> Schedule meeting with Alex
+                             <li> <span class="check">&#10003</span> Homepage refresh <span class="rosa"> Website</span></li>
+                             <li> <span class="check">&#10003</span> Onboard new Sales team members <span class="verdechiaro"> Sales</span></li>
+                             <li> <span class="check">&#10003</span> Review editorial calendar <span class="celeste"> Editorial</span></li>
+                         </ul>
+                    </div>  
+
+                </div>
+             </section>
+
+             <section>
+                 <div></div>
              </section>
     <!-- Fine corpo della pagina -->
         </div>
