--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <!-- Inizio section con button -->
              <section>
                 <div class="contenitore-button">
-                    <button class="button-task">Add Task</button>
-                    <button class="button-section">Add section</button>
+                    <button class="button task">Add Task</button>
+                    <button class="button section">Add section</button>
                 </div>
                 </section>
     <!-- /Fine section con button -->
@@ -36,25 +36,25 @@
                 <div class="contenitore-main">
                      <div class="sezione">
                             <ul> <h2> <span>&#9662</span> New Task</h2>
-                                <li> <span class="check">&#10003</span> Quarterly Newsletter <span class="celeste"> Editorial</span></li>
+                                <li> <span class="check">&#10003</span> Quarterly Newsletter <span class="celeste rettangolo"> Editorial</span></li>
                             </ul>
                     </div>  
                     
                     <div class="sezione">
                         <ul> <h2> <span>&#9662</span> Today</h2>
-                            <li> <span class="check">&#10003</span> Recruiting blog post <span class="celeste"> Editorial</span></li>
-                            <li> <span class="check">&#10003</span> Mobile app luanch <span class="viola"> Q1 Goals</span></li>
-                            <li> <span class="check-cross">&#10007</span> Interview John H. <span class="verde"> Recruiting</span></li>
-                            <li> <span class="check">&#10003</span> Summit update to mobile storefronts <span class="arancione"> Mobile</span></li>
+                            <li> <span class="check">&#10003</span> Recruiting blog post <span class="celeste rettangolo"> Editorial</span></li>
+                            <li> <span class="check">&#10003</span> Mobile app luanch <span class="viola rettangolo"> Q1 Goals</span></li>
+                            <li> <span class="check-cross">&#10007</span> Interview John H. <span class="verde rettangolo"> Recruiting</span></li>
+                            <li> <span class="check">&#10003</span> Summit update to mobile storefronts <span class="arancione rettangolo"> Mobile</span></li>
                         </ul>
                     </div>  
 
                     <div class="sezione">
-                         <ul> <h2> <span>&#9662</span> New Task</h2>
+                         <ul> <h2> <span>&#9662</span> Upcoming</h2>
                              <li> <span class="check-cross">&#10007</span> Schedule meeting with Alex
-                             <li> <span class="check">&#10003</span> Homepage refresh <span class="rosa"> Website</span></li>
-                             <li> <span class="check">&#10003</span> Onboard new Sales team members <span class="verdechiaro"> Sales</span></li>
-                             <li> <span class="check">&#10003</span> Review editorial calendar <span class="celeste"> Editorial</span></li>
+                             <li> <span class="check">&#10003</span> Homepage refresh <span class="rosa rettangolo"> Website</span></li>
+                             <li> <span class="check">&#10003</span> Onboard new Sales team members <span class="verdechiaro rettangolo"> Sales</span></li>
+                             <li> <span class="check">&#10003</span> Review editorial calendar <span class="celeste rettangolo"> Editorial</span></li>
                          </ul>
                     </div>  
 
